--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Ideamet';
+    src: url('/fonts/ideamet.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +18,7 @@ html {
 
 body {
     color: #010101;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Ideamet', sans-serif;
     line-height: 1.5;
 }
 
@@ -47,34 +54,36 @@ ol {
 
 .header__wrapper {
     display: grid;
-    justify-content: start;
-    grid-template-columns: auto auto auto;
-    column-gap: 20.7rem;
     font-size: 1.3rem;
 
 }
 
 .header__logo {
-    display: flex;
-    height: 60px;
-    object-fit: cover;
+    width: 10rem;
+    height: 10rem;
+    position: absolute;
+    left: 7rem;
+}
+
+.header__main-logo {
+    position: absolute;
 
 }
 
-.header__logo-img:nth-child(2) {
-    transform: translateX(-12px);
+.header__logo-text {
+    filter: brightness(0);
 }
 
 .header__nav {
     position: fixed;
-    z-index: 1000;
+    z-index: 100;
     justify-self: center;
 }
 
 .header__nav-list {
     display: flex;
-    gap: 3.3rem;
-    padding: 0.6rem 1rem;
+    gap: 2.7rem;
+    padding: 0.6rem 1.3rem;
     position: relative;
     border-radius: 9px;
     background: linear-gradient(white, white) padding-box, linear-gradient(90deg, #f3dce1, #f8e3cd, #f2eac2, #f2e8ca, #d2ddbf) border-box;
@@ -88,19 +97,18 @@ ol {
 .header__contact-link {
     position: absolute;
     top: 2.4rem;
-    right: 7.8rem;
+    right: 7.1rem;
     color: #010101;
     text-decoration: underline;
     text-decoration-thickness: 1px;
-    text-underline-offset: 6px;
+    text-underline-offset: 7.6px;
 }
-
 
 
 /* Hero Section */
 
 .hero {
-    padding: 6.8rem 13.2rem;
+    padding: 10.5rem 0;
 }
 
 .hero__flex {
@@ -109,14 +117,33 @@ ol {
 }
 
 .hero__text {
-    position: relative;
     z-index: 2;
 }
 
 .hero__heading {
-    font-size: 9rem;
+    font-size: 9.6rem;
     font-weight: 700;
     line-height: 1;
+}
+
+.hero__text--we {
+    position: relative;
+    right: 1rem;
+    top: 1rem;
+
+}
+
+.hero__text--are {
+    position: relative;
+    top: 19rem;
+    left: 5.2rem;
+
+}
+
+.hero__text--gritty {
+    position: relative;
+    bottom: 11rem;
+
 }
 
 .hero__image-container {
@@ -126,36 +153,34 @@ ol {
 
 .hero__image {
     position: relative;
-    left: 10rem;
+    left: 8.8rem;
 }
 
 .hero__circle-dots {
     position: absolute;
-    bottom: -3rem;
+    bottom: -6rem;
     right: -15rem;
-    height: 100px;
     width: 200px;
-    z-index: 3;
 }
-
 
 /* Gallery Section */
-.gallery {
-    position: relative;
-}
 
 .gallery__grid {
+    background-color: black;
     display: grid;
     grid-template-areas:
         'gallery__image--1 gallery__image--2 gallery__image--3'
         'gallery__image--1 gallery__image--4 gallery__image--3'
         'gallery__image--1 gallery__image--5 gallery__image--6'
     ;
+    grid-template-rows: repeat(3, 550px);
     gap: 6rem;
-    position: absolute;
-    left: 0;
 }
 
+.gallery .container {
+    max-width: fit-content;
+    padding: 0;
+}
 
 .gallery__item--1 {
     grid-area: gallery__image--1;
@@ -184,14 +209,160 @@ ol {
 .gallery__item img {
     width: 100%;
     height: 100%;
-    object-fit: fill;
-    transition: transform 0.5s ease;
+    object-fit: cover;
 }
 
 .gallery img:not(.gallery__image--4) {
     filter: grayscale(100%);
 }
 
-.gallery__item:hover .gallery__image {
-    transform: scale(1.05);
+/* About section */
+.about {
+    background-color: #ffffff;
+    margin-right: 16.6rem;
+    margin-top: 9.5rem;
+}
+
+.about__text {
+    line-height: 1.3;
+}
+
+.about__paragraph {
+    font-size: 3.6rem;
+    font-weight: 500;
+}
+
+.about__info {
+    display: flex;
+    align-items: flex-start;
+    gap: 15rem;
+    padding-top: 12rem;
+}
+
+.about__title {
+    font-size: 2.2rem;
+    font-weight: 600;
+}
+
+.about__circle {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 1px solid #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.about__info-right {
+    flex: 1;
+}
+
+.about__heading {
+    font-size: 3.4rem;
+    font-weight: 600;
+    line-height: 1.3;
+}
+
+.about__description {
+    font-size: 2rem;
+    color: #838383;
+}
+
+
+/* Curved Text Slider Section */
+.curved-slider {
+    padding: 200px 0;
+    overflow: hidden;
+}
+
+.curved-slider__text-wrapper {
+    position: absolute;
+    width: 200%;
+    height: 100%;
+    animation: curvedSlide 15s linear infinite;
+}
+
+.curved-slider__text {
+    font-size: 36px;
+    font-weight: 600;
+    color: #868686;
+    white-space: nowrap;
+    padding: 0 20px;
+}
+
+@keyframes curvedSlide {
+    from {
+        transform: translateX(50%);
+    }
+
+    to {
+        transform: translateX(-50%);
+    }
+}
+
+/* Team Section */
+.team {
+    background-color: ffffff;
+}
+
+.team__header {
+    text-align: center;
+    margin-bottom: 5rem;
+}
+
+.team__title {
+    font-size: 4rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+.team__subtitle {
+    font-size: 1.8rem;
+    color: #838383;
+}
+
+.team__grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 4rem;
+}
+
+.team__member {
+    text-align: center;
+}
+
+.team__member-image-container {
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 2rem;
+}
+
+.team__member-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: grayscale(100%);
+    transition: filter 0.3s ease;
+}
+
+.team__member:hover .team__member-image {
+    filter: grayscale(0%);
+}
+
+.team__member-name {
+    font-size: 2.2rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.team__member-position {
+    font-size: 1.6rem;
+    color: #838383;
 }
