--- a/style.css
+++ b/style.css
@@ -269,7 +269,6 @@ ol {
     color: #838383;
 }
 
-
 /* Curved Text Slider Section */
 .curved-slider {
     padding: 200px 0;
@@ -277,23 +276,23 @@ ol {
 }
 
 .curved-slider__text-wrapper {
-    position: absolute;
-    width: 200%;
+    position: relative;
+    width: 100%;
     height: 100%;
+    white-space: nowrap;
     animation: curvedSlide 15s linear infinite;
 }
 
 .curved-slider__text {
+    position: absolute;
     font-size: 36px;
     font-weight: 600;
     color: #868686;
-    white-space: nowrap;
-    padding: 0 20px;
 }
 
 @keyframes curvedSlide {
     from {
-        transform: translateX(50%);
+        transform: translateX(0%);
     }
 
     to {
@@ -303,7 +302,7 @@ ol {
 
 /* Team Section */
 .team {
-    background-color: ffffff;
+    background-color: #ffffff;
 }
 
 .team__header {
@@ -322,47 +321,193 @@ ol {
     color: #838383;
 }
 
+
 .team__grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(5, auto);
     gap: 4rem;
 }
 
-.team__member {
-    text-align: center;
+.founder__misbah-info {
+    border-right: 1px solid #8b8b8b;
 }
 
-.team__member-image-container {
-    width: 100%;
-    height: 0;
-    padding-bottom: 100%;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 2rem;
+/* Work Section */
+.work-section {
+    padding-top: 14rem;
+    padding-right: 6rem;
 }
 
-.team__member-image {
+.work-section__title {
+    font-size: 4rem;
+    margin-top: 17.2rem;
     position: absolute;
-    top: 0;
-    left: 0;
+    padding-left: 24rem;
+    z-index: 1;
+}
+
+.work-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 330px);
+    position: relative;
+    z-index: 2;
+}
+
+.work-item {
+    position: relative;
+}
+
+.work-item_1 {
+    top: 3rem;
+}
+
+.work-item_2 {
+    top: 8rem;
+    right: 4rem;
+}
+
+.work-item_3 {
+    top: 3rem;
+    right: 3rem;
+}
+
+.work-item_4 {
+    left: 7rem;
+}
+
+.work-item_5 {
+    top: 4rem;
+    left: 3rem;
+}
+
+.work-item_6 {
+    top: 7rem;
+    left: 13rem;
+}
+
+.work-item_7 {
+    top: 9rem;
+    left: 17rem;
+}
+
+.work-item_8 {
+    top: 2rem;
+    left: 13.2rem;
+}
+
+/* Contact Section */
+
+.contact {
+    margin-top: 3.9rem;
+    margin-right: 12.5rem;
+}
+
+.contact__content {
+    border-top: 1px solid #7f7f7f;
+}
+
+.contact__intro {
+    padding-top: 12.5rem;
+    font-size: 1.5rem;
+    line-height: 1.5;
+    color: #7f7f7f;
+}
+
+.contact__form-container {
+    padding-top: 2.6rem;
+    font-size: 4rem;
+}
+
+.contact__input {
+    border: none;
+    border-bottom: 1.56px solid black;
+    font-size: 2.3rem;
+    font-weight: 500;
+    padding: 6px 0;
+    width: 25rem;
+    background: transparent;
+    cursor: pointer;
+}
+
+.contact__input:focus {
+    outline: none;
+    border-bottom: 1px solid black;
+}
+
+.contact__bottom {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact__social {
+    word-spacing: 3rem;
+}
+
+.social-link {
+    color: #101820;
+    font-weight: 500;
+    font-size: 2rem;
+}
+
+.contact__submit {
+    border-radius: 12px;
+    border: 1px solid #000;
+    background: #000;
+    padding: 1.13rem;
+    color: #fff;
+    font-size: 3rem;
+    cursor: pointer;
+}
+
+.contact__greeting textarea {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: grayscale(100%);
-    transition: filter 0.3s ease;
+    resize: none;
 }
 
-.team__member:hover .team__member-image {
-    filter: grayscale(0%);
+
+/* Footer */
+.footer {
+    background-color: #000000;
+    margin-top: 10rem;
+    position: relative;
 }
 
-.team__member-name {
-    font-size: 2.2rem;
-    font-weight: 600;
-    margin-bottom: 0.5rem;
+.footer__center img {
+    position: absolute;
+    right: 50%;
+    bottom: 50%;
 }
 
-.team__member-position {
-    font-size: 1.6rem;
-    color: #838383;
+.footer__nav-link {
+    color: white;
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+.footer__items {
+    display: flex;
+    justify-content: space-between;
+    color: #868686;
+}
+
+.footer__bottom {
+    padding-top: 9rem;
+}
+
+.footer__privacy a {
+    color: white;
+    padding-left: 5rem;
+}
+
+.footer_back {
+    padding-top: 4rem;
+}
+
+.footer__back-arrow img {
+    padding-left: 1.5rem;
+}
+
+.footer__back-text {
+    color: white;
 }
